# mi-hulladekfelismero

./: .gitignore  README.md  modal_train.py  pyproject.toml  requirements.txt
app/: app.py
dataset/: README.md
docs/: fejlesztoi-naplo.md
models/howa_modal_run1/: evaluation.txt  summary.json
models/kaggle_howa_b200_run1/: evaluation.txt  summary.json
models/kaggle_howa_b200_run2/: evaluation.txt  summary.json
scripts/: _bootstrap.py  app.py  check_dataset.py  evaluate.py  import_howa.py  modal_train.py  predict.py  train.py
src/: check_dataset.py  data.py  evaluate.py  import_howa.py  model.py  predict.py  train.py  utils.py
src/waste_classifier/: __init__.py  config.py  data.py  dataset_tools.py  evaluation.py  gui.py  howa.py  inference.py  modal_train.py  model.py  training.py  utils.py
src/waste_classifier/cli/: app.py  check_dataset.py  evaluate.py  import_howa.py  predict.py  train.py
